# DuoEngine

./: .gitignore  CMakeLists.txt  main.cpp
assets/shaders/: basic.frag.glsl  basic.glsl  basic_color.glsl
include/math/: Mat3.hpp  Mat4.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
include/renderer/: Mesh.hpp  Shader.hpp  Shape.hpp  Texture.hpp  Triangle.hpp  Vertex.hpp
src/renderer/: Mesh.cpp  Shader.cpp
tests/unit/math/: test_mat3.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
